# hashlife

./: .gitignore  Cargo.toml  Makefile.toml  README.md  TODO
algo/: Cargo.toml
algo/benches/: breeder.rs
algo/src/: export.rs  lib.rs  node.rs  rle.rs  rule.rs  universe.rs
algo/tests/: breeder.rs  glider.rs
algo/tests/fixtures/: Breeder_gen10000.rle  Breeder_gen515.rle
benches/: breeder.rs
frontend/: Cargo.toml  Makefile.toml  index.html  index.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/src/: bootstrap.ts  drag.ts  global.d.ts  index.ts  lib.rs  render.ts  util.ts
frontend/src/patterns/: 3enginecordership.rle  index.ts
frontend/static/: index.html
image/: Cargo.toml
image/src/: lib.rs
src/: export.rs  lib.rs  main.rs  node.rs  rle.rs  rule.rs  universe.rs
tests/: breeder.rs
wasm-binding/: Cargo.toml  Makefile.toml
wasm-binding/src/: lib.rs
