[package]
name = "hashlife"
version = "0.1.0"
authors = ["amlo <xplzjwz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
indexmap = "1.6.0"
rustc-hash = "1.1.0"

[[bench]]
name = "breeder"
harness = false

[dev-dependencies]
criterion = "0.3.3"
pretty_assertions = "0.6.1"
